Document Arch Linux installation